--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -5,17 +5,7 @@
   "commitType": "docs",
   "commitConvention": "angular",
   "contributorsPerLine": 7,
-  "contributors": [
-    {
-      "login": "jarrisondev",
-      "name": "Jarrison Cano",
-      "avatar_url": "https://avatars.githubusercontent.com/u/62910118?v=4",
-      "profile": "https://jarrison.dev/",
-      "contributions": [
-        "code"
-      ]
-    }
-  ],
+  "contributors": [],
   "projectName": "perfect-line-height",
   "projectOwner": "afordigital"
 }
