--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write '**/*.{js,jsx,ts,tsx,sh}'"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
@@ -14,6 +15,7 @@
     "@unocss/reset": "^0.56.5",
     "js-confetti": "^0.12.0",
     "lucide-react": "^0.314.0",
+    "prettier": "^3.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1"
